--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "start:prod": "node scripts/seedDatabase.js && node server.js",
     "dev": "nodemon server.js",
     "seed": "node scripts/seedDatabase.js"
   },
